crates/bevy_ecs/compile_fail/tests/ui.rs
fn main() -> compile_fail_utils::ui_test::Result<()> {
    compile_fail_utils::test("ecs_ui", "tests/ui")
}
